# new-othello

./: .gitignore
client/: README.md  package-lock.json  package.json  tsconfig.json  tslint.json
client/src/: App.tsx  index.css  registerServiceWorker.ts
client/src/components/: LeftPane.tsx  LoginPanel.tsx  Receives.tsx  RightPane.tsx  Sends.tsx  TypeComponent.tsx
client/src/contexts/: sample.tsx
docs/api/: rest.yaml  ws.md
othello-client/: package-lock.json  package.json  tslint.json
othello-client/src/components/: LeftPane.tsx  Receives.tsx
server/: Cargo.toml
server/migrations/2018-11-06-123846_create_users/: up.sql
server/src/: config.rs  main.rs  util.rs
server/src/api/: mod.rs  oauth.rs
server/src/db/: schema.rs
server/src/db/models/: user.rs
server/src/oauth/: discord.rs  mod.rs  oauth.rs
