[package]
name = "server"
version = "0.1.0"
authors = ["sunho <ksunhokim123@naver.com>"]

[dependencies]
rocket = "0.4.0-rc.1"
rocket_contrib = { version = "0.4.0-rc.1", features = ["json"] }
oauth2 = "2.0.0-alpha.2"
dotenv = "0.9.0"
lazy_static = "1.1.0"
url = "1.7.2"
diesel = { version = "1.3.3", features = ["postgres"] }
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }